--- a/src/app/@admin/pages/admin.component.html
+++ b/src/app/@admin/pages/admin.component.html
@@ -1,15 +1,19 @@
-<h1>Admin</h1>
-
-<ul>
-    <li>
-        <a [routerLink]="['/home']" routerLinkActive="router-link-active">Volver a Home</a>
-    </li>
-    <li>
-        <a [routerLink]="['/admin']" routerLinkActive="router-link-active">Dashboard</a>
-    </li>
-    <li>
-        <a [routerLink]="['/admin/users']" routerLinkActive="router-link-active">Users</a>
-    </li>
-</ul>
-
-<router-outlet></router-outlet>
+<div class="d-flex" id="wrapper">
+    <!-- Sidebar-->
+   <app-admin-sidebar *ngIf="toogledMenu"></app-admin-sidebar>
+    <!-- Page content wrapper-->
+    <div id="page-content-wrapper">
+        <!-- Top navigation-->
+        <app-admin-header  (eventEmiter)= "toggled($event)"></app-admin-header>
+        <!--
+            Se crea un emitter llamado eventEmitter de instancia EventEmitter y se pasa como parametro un funcion
+            que se debe crear en el componente padre para leer la informacion que se envia por 
+            el componente hijo
+        -->
+        <!-- Page content-->
+        <div class="container-fluid">
+            <app-admin-title></app-admin-title>
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
