agregar estilos al header, footer y navbar de la parte publica, ademas agregar los iconos de redes sociales y agregar el logo de la tienda

--- a/src/app/@admin/core/components/sidebar/sidebar.component.html
+++ b/src/app/@admin/core/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="border-end bg-white" id="sidebar-wrapper">
     <div class="sidebar-heading border-bottom">
-        <a [routerLink]="['/home']" routerLinkActive="router-link-active" id="refPrincipal">Gamezonia</a>
+        <a [routerLink]="['/']" routerLinkActive="router-link-active" id="refPrincipal">Gamezonia</a>
     </div>
     <div class="list-group list-group-flush">
         <a class="list-group-item list-group-item-action list-group-item-light p-3" [routerLink]="['/admin']" routerLinkActive="router-link-active" ><i
