--- a/src/app/@public/pages/public.component.html
+++ b/src/app/@public/pages/public.component.html
@@ -1,15 +1,7 @@
-<h1>Online Shop</h1>
 
-<ul>
-    <li>
-        <a [routerLink]="['/home']" routerLinkActive="router-link-active">Home</a>
-    </li>
-    <li>
-        <a [routerLink]="['/contact']" routerLinkActive="router-link-active">Contact</a>
-    </li>
-    <li>
-        <a [routerLink]="['/admin']" routerLinkActive="router-link-active">Admin</a>
-    </li>
-</ul>
-
-<router-outlet></router-outlet>
+<app-public-header></app-public-header>
+<app-public-navbar></app-public-navbar>
+<div class="main">
+    <router-outlet></router-outlet>
+</div>
+<app-public-footer></app-public-footer>
