--- a/src/app/@public/core/components/navbar/navbar.component.html
+++ b/src/app/@public/core/components/navbar/navbar.component.html
@@ -9,6 +9,12 @@
         <li class="nav-item">
             <a [routerLink]="['/contact']" routerLinkActive="router-link-active" class="nav-link" >Contact</a>
         </li>
+        <li class="nav-item">
+            <a [routerLink]="['/login']" routerLinkActive="router-link-active" class="nav-link" >Login</a>
+        </li>
+        <li class="nav-item">
+            <a [routerLink]="['/register']" routerLinkActive="router-link-active" class="nav-link" >Register</a>
+        </li>
     </ul>
 </nav>
 
