--- a/src/app/@public/core/components/navbar/navbar.component.html
+++ b/src/app/@public/core/components/navbar/navbar.component.html
@@ -1,20 +1,82 @@
 <nav class="navbar navbar-expand-sm navbar-dark custom-bg sticky-top">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
-        <li class="nav-item">
-            <a [routerLink]="['/']" routerLinkActive="router-link-active" class="nav-link" >Home</a>
-        </li>
-        <li class="nav-item">
-            <a [routerLink]="['/admin']" routerLinkActive="router-link-active" class="nav-link" >Admin</a>
-        </li>
-        <li class="nav-item">
-            <a [routerLink]="['/contact']" routerLinkActive="router-link-active" class="nav-link" >Contact</a>
-        </li>
-        <li class="nav-item">
-            <a [routerLink]="['/login']" routerLinkActive="router-link-active" class="nav-link" >Login</a>
-        </li>
-        <li class="nav-item">
-            <a [routerLink]="['/register']" routerLinkActive="router-link-active" class="nav-link" >Register</a>
-        </li>
+      <li class="nav-item">
+        <a
+          [routerLink]="['/']"
+          routerLinkActive="router-link-active"
+          class="nav-link"
+          >Home</a
+        >
+      </li>
+     
+      <li class="nav-item">
+        <a
+          [routerLink]="['/contact']"
+          routerLinkActive="router-link-active"
+          class="nav-link"
+          >Contact</a
+        >
+      </li>
     </ul>
+    <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+        
+      <li class="nav-item">
+        <a
+          [routerLink]="['/admin']"
+          routerLinkActive="router-link-active"
+          class="nav-link"
+          >Admin</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          [routerLink]="['/login']"
+          routerLinkActive="router-link-active"
+          class="nav-link"
+          >Login</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          [routerLink]="['/register']"
+          routerLinkActive="router-link-active"
+          class="nav-link"
+          >Register</a
+        >
+      </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            id="navbarDropdown"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+            >nrv23</a
+          >
+          <div
+            class="dropdown-menu dropdown-menu-end"
+            aria-labelledby="navbarDropdown"
+          >
+            <a class="dropdown-item" href="#!">Perfil</a>
+            <a class="dropdown-item" href="#!">Settings</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#!">Logout</a>
+          </div>
+        </li>
+      </ul>
+  </div>
 </nav>
-
