--- a/src/app/@public/core/components/navbar/navbar.component.html
+++ b/src/app/@public/core/components/navbar/navbar.component.html
@@ -32,15 +32,15 @@
     </ul>
     <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
         
-      <li class="nav-item">
-        <a
+      <li class="nav-item" *ngIf="access">
+        <a 
           [routerLink]="['/admin']"
           routerLinkActive="router-link-active"
           class="nav-link"
           >Admin</a
         >
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="!access">
         <a
           [routerLink]="['/login']"
           routerLinkActive="router-link-active"
@@ -48,7 +48,7 @@
           >Login</a
         >
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="!access">
         <a
           [routerLink]="['/register']"
           routerLinkActive="router-link-active"
@@ -56,7 +56,7 @@
           >Register</a
         >
       </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" *ngIf="access">
           <a
             class="nav-link dropdown-toggle"
             id="navbarDropdown"
