--- a/src/app/@public/core/components/navbar/navbar.component.html
+++ b/src/app/@public/core/components/navbar/navbar.component.html
@@ -32,7 +32,7 @@
     </ul>
     <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
         
-      <li class="nav-item" *ngIf="access">
+      <li class="nav-item" *ngIf="access && role ==='ADMIN'">
         <a 
           [routerLink]="['/admin']"
           routerLinkActive="router-link-active"
@@ -65,7 +65,7 @@
             data-bs-toggle="dropdown"
             aria-haspopup="true"
             aria-expanded="false"
-            >nrv23</a
+            >{{name}}</a
           >
           <div
             class="dropdown-menu dropdown-menu-end"
@@ -74,7 +74,7 @@
             <a class="dropdown-item" href="#!">Perfil</a>
             <a class="dropdown-item" href="#!">Settings</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#!">Logout</a>
+            <a class="dropdown-item" (click)="logout()">Logout</a>
           </div>
         </li>
       </ul>
