--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,7 @@
 */
 
 @import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"; 
+
+/* Importing Bootstrap SCSS file. 
+@import '~bootstrap/scss/bootstrap';
+*/
