--- a/src/app/@admin/core/components/sidebar/sidebar.component.html
+++ b/src/app/@admin/core/components/sidebar/sidebar.component.html
@@ -1,11 +1,30 @@
 <div class="border-end bg-white" id="sidebar-wrapper">
-    <div class="sidebar-heading border-bottom">
-        <a [routerLink]="['/']" routerLinkActive="router-link-active" id="refPrincipal">Gamezonia</a>
-    </div>
-    <div class="list-group list-group-flush">
-        <a class="list-group-item list-group-item-action list-group-item-light p-3" [routerLink]="['/admin']" routerLinkActive="router-link-active" ><i
-                class="fa-solid fa-chart-line"></i> Dashboard</a>
-        <a class="list-group-item list-group-item-action list-group-item-light p-3" [routerLink]="['/admin/users']" routerLinkActive="router-link-active" ><i
-                class="fa-solid fa-users"></i> Users</a>
-    </div>
+  <div class="sidebar-heading border-bottom">
+    <a
+      [routerLink]="['/']"
+      routerLinkActive="router-link-active"
+      id="refPrincipal"
+      >Gamezonia</a
+    >
+  </div>
+  <div class="list-group list-group-flush">
+    <a
+      class="list-group-item list-group-item-action list-group-item-light p-3"
+      [routerLink]="['/admin']"
+      routerLinkActive="router-link-active"
+      ><i class="fa-solid fa-chart-line"></i> Dashboard</a
+    >
+    <a
+      class="list-group-item list-group-item-action list-group-item-light p-3"
+      [routerLink]="['/admin/users']"
+      routerLinkActive="router-link-active"
+      ><i class="fa-solid fa-users"></i> Users</a
+    >
+    <a
+      class="list-group-item list-group-item-action list-group-item-light p-3"
+      [routerLink]="['/admin/genres']"
+      routerLinkActive="router-link-active"
+      ><i class="fas fa-atlas"></i> Genres</a
+    >
+  </div>
 </div>
