crud casi completo de generos. Problema con cambiar el estado de los generos

--- a/src/app/@admin/pages/genres/genres.component.html
+++ b/src/app/@admin/pages/genres/genres.component.html
@@ -1,5 +1,3 @@
-<p>genres works!</p>
-
 <app-table-pagination
   [query]="query"
   [context]="context"
@@ -7,4 +5,8 @@
   [resultData]="resultData"
   [include]="include"
   [columns]="columns"
+  (manageItem)="takeAction($event)" 
 ></app-table-pagination>
+<!-- 
+  (manageItem)="takeAction($event)"  se leen los valores del tipo output que vienen del componente hijo al componente padre
+-->
