--- a/src/app/@shared/table-pagination/table-pagination.component.html
+++ b/src/app/@shared/table-pagination/table-pagination.component.html
@@ -3,20 +3,42 @@
 
     usar el pipe async para poder mostrar informacion de un observable en html
 -->
+<button class="btn btn-success mb-1" (click)="manageOption('add', '')">
+  <i class="fa-solid fa-square-plus"></i>
+  Añadir
+</button>
 
 <div class="table-responsive">
   <table class="table table-striped">
     <thead>
       <tr>
-        <th scope="col" *ngFor="let item of columns" >{{item.label}}</th>
+        <th scope="col" *ngFor="let item of columns">{{ item.label }}</th>
+        <th scope="col">Gestionar información</th>
       </tr>
     </thead>
     <tbody>
+      <!--  columns es el valor que lee de forma dinamica el numero de columnas y nombres de campos para reutilizar un mismo componente de tabla -->
       <tr *ngFor="let user of data$ | async">
         <td *ngFor="let item of columns">
           {{ user[item.property] }}
         </td>
-  
+        <td>
+          <button type="button" class="btn btn-secondary mx-1"
+            (click)="manageOption('edit', user)"
+          >
+            <i class="fa-solid fa-pen-to-square"></i>
+          </button>
+          <button type="button" class="btn btn-primary mx-1"
+            (click)="manageOption('info', user)"
+          >
+            <i class="fa-solid fa-list"></i>
+          </button>
+          <button type="button" class="btn btn-danger mx-1"
+            (click)="manageOption('block', user)"
+          >
+            <i class="fa-solid fa-lock"></i>
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
@@ -31,9 +53,7 @@
   >
   </ngb-pagination>
 
-  
-
-    <select
+  <select
     class="form-select"
     style="width: auto"
     [(ngModel)]="infoPage.itemsPage"
@@ -44,5 +64,4 @@
     <option [ngValue]="15">15 items per page</option>
     <option [ngValue]="20">20 items per page</option>
   </select>
-
 </div>
