--- a/src/app/@admin/pages/users/users.component.html
+++ b/src/app/@admin/pages/users/users.component.html
@@ -5,4 +5,5 @@
   [resultData]="resultData"
   [include]="include"
   [columns]="columns"
+  (manageItem)="takeAction($event)"
 ></app-table-pagination>
