agregar funciones para cargar juegos aleatorios en oferta y por categoria, nuevos servicios, interfaces, operaciones de graphql y fragments

--- a/src/app/@public/pages/home/home.component.html
+++ b/src/app/@public/pages/home/home.component.html
@@ -17,22 +17,17 @@
  <shop-carousel-items [items]="items"></shop-carousel-items>
 
 <app-product-category-list
-[title]="'Juegos más economico'"
+[title]="'Productos en oferta'"
 [productList]="listOne"
 >
 </app-product-category-list>
 
 
 <app-product-category-list
-[title]="'Estrenos'"
+[title]="'Productos de plataforma PC'"
 [productList]="listTow"
 >
 </app-product-category-list>
 
 
 
-<app-product-category-list
-[title]="'Mejor valorados'"
-[productList]="listTree"
->
-</app-product-category-list>
