--- a/src/app/@public/core/components/navbar/navbar.component.html
+++ b/src/app/@public/core/components/navbar/navbar.component.html
@@ -12,21 +12,12 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item" *ngFor="let item of menuItems">
         <a
-          [routerLink]="['/']"
+          [routerLink]="item.url"
           routerLinkActive="router-link-active"
           class="nav-link"
-          >Home</a
-        >
-      </li>
-     
-      <li class="nav-item">
-        <a
-          [routerLink]="['/contact']"
-          routerLinkActive="router-link-active"
-          class="nav-link"
-          >Contact</a
+          >{{item.label}}</a
         >
       </li>
     </ul>
