--- a/src/app/@public/pages/games/games.component.html
+++ b/src/app/@public/pages/games/games.component.html
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="container-fluid" *ngIf="!loading">
   <app-product-category-list
-    [title]="'juegos de sony'"
+    [title]="title"
     [productList]="productList"
+    [description]="description"
   >
   </app-product-category-list>
   <div class="d-flex justify-content-between p-2">
