--- a/src/app/@shared/table-pagination/table-pagination.component.html
+++ b/src/app/@shared/table-pagination/table-pagination.component.html
@@ -3,6 +3,7 @@
 
     usar el pipe async para poder mostrar informacion de un observable en html
 -->
+<div class="container-fluid" *ngIf="!loading">
 
 <button class="btn btn-success mb-1" (click)="manageOption('add', '')">
   <i class="fa-solid fa-square-plus"></i>
@@ -103,4 +104,6 @@
     <option [ngValue]="15">15 items per page</option>
     <option [ngValue]="20">20 items per page</option>
   </select>
+</div>
+
 </div>
