funcionalidad completa de carrito de compras, cargar los productos, actualizarlos y ver la actualizacion en tiempo real usando los observables, cargando los datos temporalmente en localStorage, dando estilos y listado, quitando y actualizando cantidad, además de mostrar la informacion, borrar los datos del carrito y procesar el pedido

--- a/src/app/@public/core/components/navbar/navbar.component.html
+++ b/src/app/@public/core/components/navbar/navbar.component.html
@@ -47,6 +47,13 @@
           >Register</a
         >
       </li>
+      <li class="nav-item" *ngIf="!access">
+        <a
+          (click)="open()"
+          class="nav-link"
+          ><i class="fa-solid fa-cart-shopping"></i></a
+        >
+      </li>
         <li class="nav-item dropdown" *ngIf="access">
           <a
             class="nav-link dropdown-toggle"
