--- a/src/app/@public/pages/public.component.html
+++ b/src/app/@public/pages/public.component.html
@@ -1,6 +1,7 @@
 
 <app-public-header></app-public-header>
 <app-public-navbar></app-public-navbar>
+<app-shopping-cart></app-shopping-cart>
 <div class="main">
     <router-outlet></router-outlet>
 </div>
