--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -10,7 +10,8 @@ $admin-secondary-color: #0143a3 !important;
     Colores para el apartado publico (tienda)
 
 ===================================================================================== */
-
+$price-primary: #cc1c39;
+$price-discount: #999;
 
 
 /* =====================================================================================
