agregar carrito de compras completo, mostrando productos, cantidad y total a pagar

--- a/src/app/@public/core/components/navbar/navbar.component.scss
+++ b/src/app/@public/core/components/navbar/navbar.component.scss
@@ -5,3 +5,10 @@
 .dropdown-item, .nav-item {
     cursor: pointer;
 }
+
+.notification {
+    position: relative;
+    top: -12px;
+    left: -2px;
+    border-radius: 10px;
+}
