--- a/src/app/@public/core/components/navbar/navbar.component.html
+++ b/src/app/@public/core/components/navbar/navbar.component.html
@@ -47,11 +47,15 @@
           >Register</a
         >
       </li>
-      <li class="nav-item" *ngIf="!access">
+      <li class="nav-item" >
         <a
           (click)="open()"
           class="nav-link"
-          ><i class="fa-solid fa-cart-shopping"></i></a
+          ><i class="fa-solid fa-cart-shopping"></i>
+          <span class="badge bg-success rounded-pill notification">
+            {{cart.subtotal}}
+          </span>
+          </a
         >
       </li>
         <li class="nav-item dropdown" *ngIf="access">
